--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-conda create -n env_HNET python=3.7
-conda activate env_HNET
-pip install matplotlib numpy pandas statsmodels networkx seaborn community python-louvain 
+#conda create -n env_HNET python=3.6
+#conda activate env_HNET
+pip install matplotlib numpy pandas statsmodels networkx seaborn community python-louvain
 pip install tqdm community sklearn
 pip install dash dash-renderer dash-html-components dash-core-components
-
-pip install spyder
+#conda install spyder
