--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
 include versioneer.py
 include hnet/_version.py
 include hnet/data/*.csv
+include hnet/data/*.zip
+include hnet/gui/results/tmp/*.csv
