--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 #conda create -n env_HNET python=3.6
 #conda activate env_HNET
-pip install matplotlib numpy pandas statsmodels networkx seaborn community python-louvain
-pip install tqdm community sklearn
-pip install dash dash-renderer dash-html-components dash-core-components
 #conda install spyder
+
+matplotlib
+numpy
+pandas
+statsmodels
+networkx
+seaborn
+community
+python-louvain
+statsmodels
+
+tqdm
+community
+sklearn
+
+# pip install dash dash-renderer dash-html-components dash-core-components
