ismember is external function

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,8 @@ tqdm
 community
 sklearn
 
+# Custom libraries
+ismember
+imagesc
+
 # pip install dash dash-renderer dash-html-components dash-core-components
